--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
   api:
+    environment:
+      - DOCKER=True
     restart: always
     build: .
     command: bash docker_entrypoint.sh
